Fixed border on post input field and flex spacing for the avatars

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -240,6 +240,7 @@ label {
     flex-wrap: wrap;
     flex-direction: column;
     width: 50%;
+    border-width: 1px;
 
 }
 
@@ -356,6 +357,18 @@ mainphotoz {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-left: 10px;
+}
+
+#avatars-options {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 10px;
+    justify-content: space-around;
+}
+
+#avatar {
     margin-left: 10px;
 }
 
